[package]
name = "xxhash2"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["hash"]
repository = "https://github.com/alexcrichton/xxhash2-rs"
homepage = "https://github.com/alexcrichton/xxhash2-rs"
documentation = "https://docs.rs/xxhash2-rs"
description = """
Bindings to libxxhash to provide the xxHash algorithm in Rust. Also contains an
implementation of the std::hash traits so this can be used with the standard
HashMap.
"""

[dependencies]
libc = "0.2"
xxhash-sys = { path = "xxhash-sys", version = "0.1" }
