[package]
name = "xxhash-sys"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "xxhash"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/xxhash2-rs"
homepage = "https://github.com/alexcrichton/xxhash2-rs"
documentation = "http://alexcrichton.com/xxhash2-rs"
description = """
Raw bindings to libxxhash which contains an implementation of xxHash
"""

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
